fixed spacing

--- a/assets/styles/global.sass
+++ b/assets/styles/global.sass
@@ -113,7 +113,7 @@ body
   padding-bottom: 20px
 
 .posts-sidebar-link
-  padding: 8px 8px
+  padding: 8px 0
   display: block
 
 
